fix diaplay on mobile (scroll)

--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,7 @@ body {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
-  overflow: hidden;
+  font-family: "Roboto Slab", sans-serif;
 }
 
 .page {
@@ -31,9 +30,11 @@ body {
 
 /* HEADER */
 .page__header {
-  position: absolute;
+  position: fixed;
   right: 0;
   top: 0;
+  width: 100%;
+  height: 80px;
 }
 
 .nav-trigger,
@@ -70,7 +71,7 @@ body {
   position: absolute;
   top: 0;
   right: -2000px;
-  transition: 2s right ease;
+  transition: 1s right ease;
 }
 
 .nav__items {
@@ -90,6 +91,11 @@ body {
   font-family: "Roboto Slab", serif;
   text-decoration: none;
   line-height: 45px;
+  transition: color 0.5s ease-out;
+}
+
+.nav__link:hover {
+  color: white;
 }
 
 .nav-close {
